--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "The Augmented.js Next Framework.",
   "main": "dist/service2.js",
   "scripts": {
-    "build": "uglifyjs ./src/service.js -o ./dist/service2.js -c -v --screw-ie8",
+    "build": "webpack --env.prod",
+    "build2": "uglifyjs ./src/service.js -o ./dist/service2.js -c -v --screw-ie8",
     "lint": "eslint ./src/service.js",
     "setup": "npm install && npm run validate",
     "validate": "npm-run-all lint test build",
-    "test": "jasmine-node ./test --verbose",
+    "test": "mocha --require babel-core/register",
     "docs": "jsdoc ./src -d ./jsdoc/ -R ./README.md -t ./node_modules/foodoc/template -c ./jsdoc.conf.json"
   },
   "repository": {
@@ -22,15 +23,29 @@
   "author": "Bob Warren <jedi.master@augmentedjs.com> (http://www.augmentedjs.com)",
   "license": "Apache-2.0",
   "devDependencies": {
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-istanbul": "^1.0.3",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-register": "^6.11.6",
+    "chai": "^4.1.2",
+    "eslint": "^3.2.2",
+    "eslint-config-kentcdodds": "^9.0.2",
+    "expect": "^21.2.1",
     "foodoc": "0.0.8",
     "jsdoc": "^3.5.5",
-    "uglify-es": "github:mishoo/UglifyJS2#harmony",
-    "uglify-js": "^3.3.2",
-    "uglify-js-es6": "^2.8.9"
+    "mocha": "^4.0.1",
+    "npm-run-all": "^4.1.2",
+    "webpack": "^2.1.0",
+    "webpack-config-utils": "^2.0.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^2.1.0",
+    "webpack-validator": "^2.2.7",
+    "uglify-es": "github:mishoo/UglifyJS2#harmony"
   },
   "dependencies": {
-    "augmentedjs-next": "^2.0.0-alpha.4",
-    "jasmine-node": "^2.0.0"
+    "augmentedjs-next": "^2.0.0-alpha.4"
   },
   "bugs": {
     "url": "https://github.com/Augmentedjs/augmented-next-service/issues"
