--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "jsdoc": "^3.5.5",
     "mocha": "^4.0.1",
     "npm-run-all": "^4.1.2",
+    "uglify-es": "github:mishoo/UglifyJS2#harmony",
     "webpack": "^2.1.0",
     "webpack-config-utils": "^2.0.0",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-dev-server": "^2.1.0",
-    "webpack-validator": "^2.2.7",
-    "uglify-es": "github:mishoo/UglifyJS2#harmony"
+    "webpack-validator": "^2.2.7"
   },
   "dependencies": {
-    "augmentedjs-next": "^2.0.0-alpha.4"
+    "augmentedjs-next": "^2.0.0-alpha.6"
   },
   "bugs": {
     "url": "https://github.com/Augmentedjs/augmented-next-service/issues"
