--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
-  "presets": ["es2015", "stage-2"],
-  "env": {
-    "test": {
-      "plugins": [
-        "istanbul"
-      ]
-    }
-  }
+  "presets": [
+    ["env", {
+      "targets": {
+        "node": "10"
+      },
+      "debug": true
+    }]
+  ]
 }
